feat(organizations): add personal organization vertical
